@@ -186,13 +186,15 @@ libmosq_EXPORT int mosquitto_lib_cleanup(void);
  * Create a new mosquitto client instance.
  *
  * Parameters:
- * 	id -  String to use as the client id. Must not be NULL or zero length.
+ * 	id -  String to use as the client id. If NULL, a random client id will be
+ *        generated. If id is NULL, clean_session in <mosquitto_connect> must
+ *        be true.
  * 	obj - A user pointer that will be passed as an argument to any callbacks
  *        that are specified.
  *
  * Returns:
  * 	Pointer to a struct mosquitto on success.
- * 	NULL on failure.
+ * 	NULL on failure (zero length id or out of memory).
  *
  * See Also:
  * 	<mosquitto_destroy>
@@ -311,10 +313,13 @@ libmosq_EXPORT int mosquitto_username_pw_set(struct mosquitto *mosq, const char 
  * 	clean_session - set to true to instruct the broker to clean all messages
  *                  and subscriptions on disconnect, false to instruct it to
  *                  keep them. See the man page mqtt(7) for more details.
+ *                  Must be set to true if the id parameter to <mosquitto_new>
+ *                  was NULL.
  *
  * Returns:
  * 	MOSQ_ERR_SUCCESS - on success.
- * 	MOSQ_ERR_INVAL -   if the input parameters were invalid.
+ * 	MOSQ_ERR_INVAL -   if the input parameters were invalid, including if
+ * 	                   clean_session is false for a random client id.
  * 	MOSQ_ERR_ERRNO -   if a system call returned an error. The variable errno
  *                     contains the error code, even on Windows.
  *                     Use strerror_r() where available or FormatMessage() on
